--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!-- Compiled and minified CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-   <title>Materialize Photo Website</title>
+   <title>Materialize Showcase</title>
    <style>
       header {
          background: url(images/alien.jpg);
          background-size: cover;
          background-position: right;
          min-height: 1000px;
+      }
+
+      .section {
+         padding-top: 4vw;
+         padding-bottom: 4vw;
       }
 
       @media screen and (max-width: 670px) {
@@ -34,17 +39,17 @@
    <header>
       <nav class="nav-wrapper transparent">
          <div class="container">
-            <a href="#" class="brand-logo">Photo Ninja</a>
+            <a href="#" class="brand-logo">Materialize Digital Art</a>
             <a href="#" class="sidenav-trigger" data-target="mobile-menu">
                <i class="material-icons">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-               <li><a href="#">Photos</a></li>
+               <li><a href="#">Pieces</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">Contact</a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
-               <li><a href="#">Photos</a></li>
+               <li><a href="#">Pieces</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">Contact</a></li>
             </ul>
@@ -52,7 +57,38 @@
       </nav>
    </header>
    <!-- photo / grid -->
-
+   <section class="container section" id="photos">
+      <div class="row">
+         <div class="col s12 l4">
+            <img src="images/wierd.jpg" alt="" class="responsive-img materialboxed">
+         </div>
+         <div class="col s12 l6 offset-l1">
+            <h2 class="grey-text text-darken-1">Portraits</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis facilis obcaecati nemo et recusandae
+            </p>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col s12 l4 push-l7 offset-l1">
+            <img src="images/city-alien.jpg" alt="" class="responsive-img materialboxed">
+         </div>
+         <div class="col s12 l6 pull-l5 right-align offset-1">
+            <h2 class="grey-text text-darken-1">Cityscapes</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis facilis obcaecati nemo et recusandae
+            </p>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col s12 l4">
+            <img src="images/alien-world.png" alt="" class="responsive-img materialboxed">
+         </div>
+         <div class="col s12 l6 offset-l1">
+            <h2 class="grey-text text-darken-1">Nature</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis facilis obcaecati nemo et recusandae
+            </p>
+         </div>
+      </div>
+   </section>
    <!-- parallax -->
 
    <!-- services / tabs -->
@@ -69,6 +105,7 @@
    <script>
       $(document).ready(function () {
          $('.sidenav').sidenav();
+         $('.materialboxed').materialbox()
       });
    </script>
 </body>
