--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       </nav>
    </header>
    <!-- photo / grid -->
-   <section class="container section" id="photos">
+   <section class="container section" id="pieces">
       <div class="row">
          <div class="col s12 l4">
-            <img src="images/wierd.jpg" alt="" class="responsive-img materialboxed">
+            <img src="images/weird.jpg" alt="" class="responsive-img materialboxed">
          </div>
          <div class="col s12 l6 offset-l1">
             <h2 class="grey-text text-darken-1">Portraits</h2>
@@ -70,10 +70,10 @@
       </div>
       <div class="row">
          <div class="col s12 l4 push-l7 offset-l1">
-            <img src="images/city-alien.jpg" alt="" class="responsive-img materialboxed">
+            <img src="images/city2-alien.jpg" alt="" class="responsive-img materialboxed">
          </div>
-         <div class="col s12 l6 pull-l5 right-align offset-1">
-            <h2 class="grey-text text-darken-1">Cityscapes</h2>
+         <div class="col s12 l6 pull-l5 right-align offset-l1">
+            <h2 class="grey-text text-darken-1 left-align">Cityscapes</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis facilis obcaecati nemo et recusandae
             </p>
          </div>
@@ -90,13 +90,36 @@
       </div>
    </section>
    <!-- parallax -->
+   <div class="parallax-container">
+      <div class="parallax">
+         <img src="images/uhhuh.jpg" alt="" class="responsive-img">
+      </div>
+   </div>
+
 
    <!-- services / tabs -->
+   <div class="container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+   </div>
 
    <!-- parallax -->
-
+   <div class="parallax-container">
+      <div class="parallax">
+         <img src="images/thisone.png" alt="" class="responsive-img">
+      </div>
+   </div>
    <!-- contact form -->
-
+   <div class="container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
+   </div>
    <!-- footer -->
 
    <!-- Compiled and minified JavaScript -->
@@ -106,6 +129,7 @@
       $(document).ready(function () {
          $('.sidenav').sidenav();
          $('.materialboxed').materialbox()
+         $('.parallax').parallax();
       });
    </script>
 </body>
