--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
          padding-top: 4vw;
          padding-bottom: 4vw;
       }
+      .tabs .indicator{
+         background-color:#B83213;
+       }
+       .tabs .tab a:focus, .tabs .tab a:focus.active{
+         background: transparent;
+       }
 
       @media screen and (max-width: 670px) {
          header {
@@ -73,7 +79,7 @@
             <img src="images/city2-alien.jpg" alt="" class="responsive-img materialboxed">
          </div>
          <div class="col s12 l6 pull-l5 right-align offset-l1">
-            <h2 class="grey-text text-darken-1 left-align">Cityscapes</h2>
+            <h2 class="grey-text text-darken-1">Cityscapes</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis facilis obcaecati nemo et recusandae
             </p>
          </div>
@@ -98,18 +104,50 @@
 
 
    <!-- services / tabs -->
-   <div class="container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-   </div>
+   <section class="container section" id="services">
+      <div class="row">
+         <div class="col s12 l4">
+            <h2 class="blue-grey-text text-darken-1">Services provided...</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus,
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus,
+            </p>
+         </div>
+         <div class="col s12 l6 offset-12">
+            <ul class="tabs">
+               <li class="tab col s6" >
+                  <a href="#design" class="deep-orange-text text-darken-4">Art & Design</a>
+               </li>
+               <li class="tab col s6" >
+                  <a href="#edit" class="deep-orange-text text-darken-4">Digital Editing</a>
+               </li>
+            </ul>
+            <div class="col s12" id="design">
+               <p class="flow-text blue-grey-text text-darken-1">ART & DESIGN</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni
+                  accusamus,
+               </p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni
+                  accusamus,
+               </p>
+            </div>
+            <div class="col s12" id="edit">
+               <p class="flow-text blue-grey-text text-darken-1">DIGITAL EDITING</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni
+                  accusamus,
+               </p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni
+                  accusamus,
+               </p>
+            </div>
+         </div>
+      </div>
+   </section>
 
    <!-- parallax -->
    <div class="parallax-container">
       <div class="parallax">
-         <img src="images/thisone.png" alt="" class="responsive-img">
+         <img src="images/nasa.jpg" alt="" class="responsive-img">
       </div>
    </div>
    <!-- contact form -->
@@ -130,6 +168,8 @@
          $('.sidenav').sidenav();
          $('.materialboxed').materialbox()
          $('.parallax').parallax();
+         $('.tabs').tabs();
+
       });
    </script>
 </body>
