--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
          padding-top: 4vw;
          padding-bottom: 4vw;
       }
-      .tabs .indicator{
-         background-color:#B83213;
-       }
-       .tabs .tab a:focus, .tabs .tab a:focus.active{
+
+      .tabs .indicator {
+         background-color: #B83213;
+      }
+
+      .tabs .tab a:focus,
+      .tabs .tab a:focus.active {
          background: transparent;
-       }
+      }
+.material-icons{
+   color: #4A636F;
+}
 
       @media screen and (max-width: 670px) {
          header {
@@ -45,17 +51,17 @@
    <header>
       <nav class="nav-wrapper transparent">
          <div class="container">
-            <a href="#" class="brand-logo">Materialize Digital Art</a>
+            <a href="#" class="brand-logo">Materialize Showcase</a>
             <a href="#" class="sidenav-trigger" data-target="mobile-menu">
                <i class="material-icons">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-               <li><a href="#">Pieces</a></li>
+               <li><a href="#">Digital Art</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">Contact</a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
-               <li><a href="#">Pieces</a></li>
+               <li><a href="#">Digital Art</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">Contact</a></li>
             </ul>
@@ -98,7 +104,7 @@
    <!-- parallax -->
    <div class="parallax-container">
       <div class="parallax">
-         <img src="images/uhhuh.jpg" alt="" class="responsive-img">
+         <img src="images/xray.jpg" alt="" class="responsive-img">
       </div>
    </div>
 
@@ -107,18 +113,18 @@
    <section class="container section" id="services">
       <div class="row">
          <div class="col s12 l4">
-            <h2 class="blue-grey-text text-darken-1">Services provided...</h2>
+            <h2 class="blue-grey-text text-darken-1">Services</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus,
             </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus,
             </p>
          </div>
-         <div class="col s12 l6 offset-12">
+         <div class="col s12 l6 offset-l2">
             <ul class="tabs">
-               <li class="tab col s6" >
+               <li class="tab col s6">
                   <a href="#design" class="deep-orange-text text-darken-4">Art & Design</a>
                </li>
-               <li class="tab col s6" >
+               <li class="tab col s6">
                   <a href="#edit" class="deep-orange-text text-darken-4">Digital Editing</a>
                </li>
             </ul>
@@ -151,13 +157,65 @@
       </div>
    </div>
    <!-- contact form -->
-   <div class="container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus laudantium magni accusamus, </p>
-   </div>
+   <section class="section container" id="contact">
+      <div class="row">
+         <div class="col s12 l5">
+            <h2 class="blue-grey-text text-darken-1">Make Contact</h2>
+            <p>
+               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores error ad at aut libero sit,
+               eligendi nisi consequatur voluptatibus inventore, dolorum odio!
+            </p>
+            <p>
+               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores error ad at aut libero sit,
+               eligendi nisi consequatur voluptatibus inventore, dolorum odio!
+            </p>
+            <p>
+               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores error ad at aut libero sit,
+               eligendi nisi consequatur voluptatibus inventore, dolorum odio!
+            </p>
+         </div>
+         <div class="col s12 l5 offset-l2">
+            <form action="">
+               <div class="input-field">
+                  <i class="material-icons prefix">email</i>
+                  <input type="email" id="email">
+                  <label for="email">Your Email</label>
+               </div>
+               <div class="input-field">
+                  <i class="material-icons prefix">message</i>
+                  <textarea class="materialize-textarea" id="message"></textarea>
+                  <label for="message">Your Message</label>
+               </div>
+               <div class="input-field">
+                  <i class="material-icons prefix">date_range</i>
+                  <input type="text" class="datepicker" id="date">
+                  <label for="date">Please choose a date...</label>
+               </div>
+               <div class="input-field">
+                  <h6><em>Services required...</em>
+                  </h6>
+                  <p>
+                     <label>
+                        <input type="checkbox">
+                        <span>Design</span>
+                     </label>
+                  </p>
+                  <p>
+                     <label>
+                        <input type="checkbox">
+                        <span>Editing</span>
+                     </label>
+                  </p>
+               </div>
+               <div class="input-field center">
+                  <button class="btn">Submit</button>
+               </div>
+            </form>
+         </div>
+      </div>
+
+
+   </section>
    <!-- footer -->
 
    <!-- Compiled and minified JavaScript -->
@@ -169,6 +227,9 @@
          $('.materialboxed').materialbox()
          $('.parallax').parallax();
          $('.tabs').tabs();
+         $('.datepicker').datepicker({
+            disableWeekends: true
+         });
 
       });
    </script>
