--- a/index.html
+++ b/index.html
@@ -217,6 +217,43 @@
 
    </section>
    <!-- footer -->
+   <footer class="page-footer blue-grey darken-3">
+      <div class="container">
+         <div class="row">
+            <div class="col s12 l6">
+               <h5>About me</h5>
+               <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores error ad at aut libero sit,
+                  eligendi nisi consequatur voluptatibus inventore, dolorum odio!
+               </p>
+               <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores error ad at aut libero sit,
+                  eligendi nisi consequatur voluptatibus inventore, dolorum odio!
+               </p>
+            </div>
+            <div class="col s12 l4 offset-l2">
+               <h5>Connect</h5>
+               <ul>
+                  <li>
+                     <a href="#" class="blue-grey-text text-lighten-3">Facebook</a>
+                  </li>
+                  <li>
+                     <a href="#" class="blue-grey-text text-lighten-3">Twitter</a>
+                  </li>
+                  <li>
+                     <a href="#" class="blue-grey-text text-lighten-3">Linked In</a>
+                  </li>
+                  <li>
+                     <a href="#" class="blue-grey-text text-lighten-3">Reddit</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </div>
+      <div class="footer-copyright grey darken-4">
+         <div class="container center-align">&copy; 2018 Mark Wilde</div>
+      </div>
+   </footer>
 
    <!-- Compiled and minified JavaScript -->
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
