Added some social media links to the navbar with font awesome icons and materialize tool tips

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                <li><a href="#">Digital Art</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">Contact</a></li>
+               <li><a href="" class="tooltipped btn-floating btn-small blue-grey darken-4" data-tooltip="Connect with Reddit">
+                     <i class="fab fa-reddit"></i>
+                  </a></li>
+               <li><a href="" class="tooltipped btn-floating btn-small blue-grey darken-4" data-tooltip="Connect with Facebook">
+                     <i class="fab fa-facebook"></i>
+                  </a></li>
+               <li><a href="" class="tooltipped btn-floating btn-small blue-grey darken-4" data-tooltip="Connect with Twitter">
+                     <i class="fab fa-twitter"></i>
+                  </a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
                <li><a href="#">Digital Art</a></li>
@@ -267,7 +276,7 @@
          $('.datepicker').datepicker({
             disableWeekends: true
          });
-
+         $('.tooltipped').tooltip();
       });
    </script>
 </body>
