--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                <i class="material-icons">menu</i>
             </a>
             <ul class="right hide-on-med-and-down">
-               <li><a href="#">Digital Art</a></li>
-               <li><a href="#">Services</a></li>
-               <li><a href="#">Contact</a></li>
+               <li><a href="#art">Digital Art</a></li>
+               <li><a href="#services">Services</a></li>
+               <li><a href="#contact">Contact</a></li>
                <li><a href="" class="tooltipped btn-floating btn-small blue-grey darken-4" data-tooltip="Connect with Reddit">
                      <i class="fab fa-reddit"></i>
                   </a></li>
@@ -70,15 +70,15 @@
                   </a></li>
             </ul>
             <ul class="sidenav grey lighten-2" id="mobile-menu">
-               <li><a href="#">Digital Art</a></li>
-               <li><a href="#">Services</a></li>
-               <li><a href="#">Contact</a></li>
+               <li><a href="#art">Digital Art</a></li>
+               <li><a href="#services">Services</a></li>
+               <li><a href="#contact">Contact</a></li>
             </ul>
          </div>
       </nav>
    </header>
    <!-- photo / grid -->
-   <section class="container section" id="pieces">
+   <section class="container section scrollspy" id="art">
       <div class="row">
          <div class="col s12 l4">
             <img src="images/weird.jpg" alt="" class="responsive-img materialboxed">
@@ -119,7 +119,7 @@
 
 
    <!-- services / tabs -->
-   <section class="container section" id="services">
+   <section class="container section scrollspy" id="services">
       <div class="row">
          <div class="col s12 l4">
             <h2 class="blue-grey-text text-darken-1">Services</h2>
@@ -166,7 +166,7 @@
       </div>
    </div>
    <!-- contact form -->
-   <section class="section container" id="contact">
+   <section class="section container scrollspy" id="contact">
       <div class="row">
          <div class="col s12 l5">
             <h2 class="blue-grey-text text-darken-1">Make Contact</h2>
@@ -277,6 +277,7 @@
             disableWeekends: true
          });
          $('.tooltipped').tooltip();
+         $('.scrollspy').scrollSpy();
       });
    </script>
 </body>
